// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<JobsToolbar /> should render when [canRemove=false] 1`] = `
<Toolbar>
  <SearchInput
    onChange={[MockFunction]}
    placeholder="User or task"
    value="foo"
  />
</Toolbar>
`;

exports[`<JobsToolbar /> should render when [canRemove=true] 1`] = `
<Toolbar>
  <SearchInput
    onChange={[MockFunction]}
    placeholder="User or task"
    value="foo"
  />
  <Button
    bsStyle="default"
    onClick={[Function]}
    pullRight={false}
    tip="Clear Finished"
    tipPlacement="top"
  >
    <Icon
      faStyle="fas"
      fixedWidth={false}
      name="trash"
    />
  </Button>
</Toolbar>
`;
